fix(gc): soft references were never cleared on any collector
Closing out the residuals the ZGC corpse-read page left open turned up a
VM-wide defect, not a ZGC one. `ReferenceProcessor::process_soft_refs` opens
with `if is_marked(entry.referent) { continue; }`, and every CratonVM marker
traces a `Reference`'s slot 0 as an ordinary strong edge -- so a soft referent
is always marked through its own `SoftReference`, that check always won, and
the LRU policy underneath it was unreachable. Soft references behaved exactly
like strong ones.

Measured against HotSpot in a 64 MiB heap (repros/reference-semantics):

  arm                              HotSpot  before  after
  weak clears                      yes      yes     yes
  phantom enqueues                 yes      yes     yes
  soft retained while roomy        yes      yes     yes
  soft cleared once tight          yes      NO      yes
  soft cleared rather than OOME    yes      NO      yes

Identical on ZGC, G1 and the default generational heap. Weak and phantom
already worked because `weakref_null_referents_pre_gc` nulls their referent
slot before the mark; the fix gives soft the same route, with the one
difference soft needs -- the LRU decision moves to the front of the collection
(`condemn_idle_soft_refs`) so only the entries the policy condemns are nulled
and the rest stay traced strongly and retained.

Two further things the probe found:

* the clock. `process_references_after_gc` passes 0 for now, which the
  processor reads as the last `SoftReference.get()` anywhere in the process --
  so the idle window of the reference the failing program is itself reading in
  a loop is zero, forever. The pre-collection pass passes a real SystemTime
  reading from the same epoch the touch hook stamps entries with.
* the last-ditch rule. java.lang.ref guarantees every softly-reachable object
  is released before OutOfMemoryError, and that is a different rule from the
  LRU policy rather than a limiting case of it. `condemn_al